@@ -1,5 +1,10 @@
 2009-09-26 Gonzalo Paniagua Javier <gonzalo@novell.com>
 
+	* test/queue.c: new tests.
+	* src/gqueue.c: fixed pop_head.
+
+2009-09-26 Gonzalo Paniagua Javier <gonzalo@novell.com>
+
 	* src/gqueue.c: add g_queue_push_tail.
 
 2009-06-20  Zoltan Varga  <vargaz@gmail.com>
